--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,1 +1,62 @@
+name: CI github pages
 
+on:
+  push:
+    branches:
+      - main
+    paths:
+      - 'launch.txt'
+      
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions: write-all
+  
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency: 
+      group: "pages"
+      cancel-in-progress: false
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Log into GCP
+        run: |
+          echo '${{ secrets.GCP_SA_KEY }}' > key.json;
+          gcloud auth login --cred-file=key.json;
+          # ---------------------------------------
+          file_text="$(cat src/cb0.txt)"
+          echo "file_text = $file_text";
+          # ---------------------------------------
+          # Save model output to GitHub environmental variables
+          echo "FILE_TEXT=$(echo $file_text)" >> "$GITHUB_ENV";
+          # ---------------------------------------
+          rm -f src/*.cfg;
+          echo '' > src/cb0.txt
+          # ---------------------------------------
+          repoOwner=$(echo "${{ github.repository }}" | cut -d '/' -f 1);
+          repoOwnerEmail="j622amilah@gmail.com";
+          git config --global user.email ${repoOwnerEmail};
+          git config --global user.name ${repoOwner};
+          git pull origin main;
+          git checkout main;
+          git branch --set-upstream-to origin/main;
+          git merge main --ff-only;
+          git add -A; 
+          git diff-index --quiet HEAD || git commit -m "add files" --allow-empty;
+          git push;
+          # ---------------------------------------
+          GCP_BUCKET_NAME=$(echo "$FILE_TEXT" | cut -d '|' -f 1)
+          echo "GCP_BUCKET_NAME = $GCP_BUCKET_NAME";
+          # ---------------------------------------
+          DESIRED_FILE_NAME=$(echo "$FILE_TEXT" | cut -d '|' -f 2)
+          echo "DESIRED_FILE_NAME = $DESIRED_FILE_NAME";
+          # ---------------------------------------
+          FILE_DATA_BASE64=$(echo "$FILE_TEXT" | cut -d '|' -f 3)
+          echo "FILE_DATA_BASE64 = $FILE_DATA_BASE64";
+          # ---------------------------------------
+          # Save base64 string to a file on the runner
+          echo -n "${FILE_DATA_BASE64}" | base64 -d > '$DESIRED_FILE_NAME'
