--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'launch.txt'
+      - 'cb0.txt'
       
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions: write-all
@@ -25,17 +25,19 @@ jobs:
 
       - name: Log into GCP
         run: |
+          # May need to install gcloud
+          # ---------------------------------------
           echo '${{ secrets.GCP_SA_KEY }}' > key.json;
           gcloud auth login --cred-file=key.json;
           # ---------------------------------------
-          file_text="$(cat src/cb0.txt)"
+          file_text="$(cat cb0.txt)"
           echo "file_text = $file_text";
           # ---------------------------------------
           # Save model output to GitHub environmental variables
           echo "FILE_TEXT=$(echo $file_text)" >> "$GITHUB_ENV";
           # ---------------------------------------
-          rm -f src/*.cfg;
-          echo '' > src/cb0.txt
+          rm -f *.cfg;
+          echo '' > cb0.txt
           # ---------------------------------------
           repoOwner=$(echo "${{ github.repository }}" | cut -d '/' -f 1);
           repoOwnerEmail="j622amilah@gmail.com";
