--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,24 +23,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Log into GCP - Way 0
-        run: |
-          echo '${{ secrets.GCP_SA_KEY }}' > key.json;
-          gcloud auth login --cred-file=key.json;
-         
-      - name: 'Set up Cloud SDK'
-        uses: 'google-github-actions/setup-gcloud@v2'
-        with:
-          version: '>= 363.0.0'
-
       - name: Log into GCP
         run: |
           # ---------------------------------------
-          file_text="$(cat src/cb0.txt)"
-          echo "file_text = $file_text";
-          # ---------------------------------------
-          # Save model output to GitHub environmental variables
-          echo "FILE_TEXT=$(echo $file_text)" >> "$GITHUB_ENV";
+          FILE_TEXT="$(cat src/cb0.txt)"
+          echo "FILE_TEXT = $FILE_TEXT";
           # ---------------------------------------
           rm -f src/bucket_contents.log;
           echo '' > src/cb0.txt
@@ -53,7 +40,7 @@ jobs:
           git checkout main;
           git branch --set-upstream-to origin/main;
           git merge main --ff-only;
-          git add -A; 
+          git add /home/runner/work/dragAndDrop_to_Storage/dragAndDrop_to_Storage/src/cb0.txt; 
           git diff-index --quiet HEAD || git commit -m "add files" --allow-empty;
           git push;
           # ---------------------------------------
@@ -69,9 +56,15 @@ jobs:
           # Save base64 string to a file on the runner
           echo -n '${FILE_DATA_BASE64}' | base64 -d > '$DESIRED_FILE_NAME'
           # ---------------------------------------
-          # GCP CLI to send file to bucket
-          gcloud storage cp /home/runner/work/dragAndDrop_to_Storage/dragAndDrop_to_Storage/Q_Git/$DESIRED_FILE_NAME gs://$GCP_BUCKET_NAME/
-          # ---------------------------------------
-          # List contents of bucket to the output src/bucket_contents.log file
-          gcloud storage ls --recursive gs://$GCP_BUCKET_NAME/**  >  src/bucket_contents.log
+          repoOwner=$(echo "${{ github.repository }}" | cut -d '/' -f 1);
+          repoOwnerEmail="j622amilah@gmail.com";
+          git config --global user.email ${repoOwnerEmail};
+          git config --global user.name ${repoOwner};
+          git pull origin main;
+          git checkout main;
+          git branch --set-upstream-to origin/main;
+          git merge main --ff-only;
+          git add /home/runner/work/dragAndDrop_to_Storage/dragAndDrop_to_Storage/$DESIRED_FILE_NAME; 
+          git diff-index --quiet HEAD || git commit -m "add files" --allow-empty;
+          git push;
           # ---------------------------------------
