--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -54,17 +54,17 @@ jobs:
           echo "FILE_DATA_BASE64 = $FILE_DATA_BASE64";
           # ---------------------------------------
           # Save base64 string to a file on the runner
-          echo -n '${FILE_DATA_BASE64}' | base64 -d > '$DESIRED_FILE_NAME'
+          # echo -n '${FILE_DATA_BASE64}' | base64 -d > '$DESIRED_FILE_NAME'
           # ---------------------------------------
-          repoOwner=$(echo "${{ github.repository }}" | cut -d '/' -f 1);
-          repoOwnerEmail="j622amilah@gmail.com";
-          git config --global user.email ${repoOwnerEmail};
-          git config --global user.name ${repoOwner};
-          git pull origin main;
-          git checkout main;
-          git branch --set-upstream-to origin/main;
-          git merge main --ff-only;
-          git add /home/runner/work/dragAndDrop_to_Storage/dragAndDrop_to_Storage/$DESIRED_FILE_NAME; 
-          git diff-index --quiet HEAD || git commit -m "add files" --allow-empty;
-          git push;
+          # repoOwner=$(echo "${{ github.repository }}" | cut -d '/' -f 1);
+          # repoOwnerEmail="j622amilah@gmail.com";
+          # git config --global user.email ${repoOwnerEmail};
+          # git config --global user.name ${repoOwner};
+          # git pull origin main;
+          # git checkout main;
+          # git branch --set-upstream-to origin/main;
+          # git merge main --ff-only;
+          # git add /home/runner/work/dragAndDrop_to_Storage/dragAndDrop_to_Storage/$DESIRED_FILE_NAME; 
+          # git diff-index --quiet HEAD || git commit -m "add files" --allow-empty;
+          # git push;
           # ---------------------------------------
