--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,8 +29,8 @@ jobs:
           FILE_TEXT="$(cat src/cb0.txt)"
           echo "FILE_TEXT = $FILE_TEXT";
           # ---------------------------------------
-          rm -f src/bucket_contents.log;
-          echo '' > src/cb0.txt
+          # rm -f src/bucket_contents.log;
+          # echo '' > src/cb0.txt
           # ---------------------------------------
           repoOwner=$(echo "${{ github.repository }}" | cut -d '/' -f 1);
           repoOwnerEmail="j622amilah@gmail.com";
