--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -51,11 +51,11 @@ jobs:
           echo "DESIRED_FILE_NAME = $DESIRED_FILE_NAME";
           # ---------------------------------------
           FILE_DATA_BASE64=$(echo "$FILE_TEXT" | cut -d '|' -f 3)
-          FILE_DATA_BASE64=$(echo "$FILE_DATA_BASE64" | cut -d ',' -f 1)
+          FILE_DATA_BASE64=$(echo "$FILE_DATA_BASE64" | cut -d ',' -f 2)
           echo "$FILE_DATA_BASE64" > base64.txt
           # ---------------------------------------
           # Save base64 string to a file on the runner
-          echo base64.txt | base64 -d > '$DESIRED_FILE_NAME'
+          cat base64.txt | base64 -d > '$DESIRED_FILE_NAME'
           # ---------------------------------------
           repoOwner=$(echo "${{ github.repository }}" | cut -d '/' -f 1);
           repoOwnerEmail="j622amilah@gmail.com";
