--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,8 +29,8 @@ jobs:
           FILE_TEXT="$(cat src/cb0.txt)"
           echo "FILE_TEXT = $FILE_TEXT";
           # ---------------------------------------
-          # rm -f src/bucket_contents.log;
-          # echo '' > src/cb0.txt
+          rm -f src/bucket_contents.log;
+          echo '' > src/cb0.txt
           # ---------------------------------------
           repoOwner=$(echo "${{ github.repository }}" | cut -d '/' -f 1);
           repoOwnerEmail="j622amilah@gmail.com";
@@ -51,6 +51,8 @@ jobs:
           echo "DESIRED_FILE_NAME = $DESIRED_FILE_NAME";
           # ---------------------------------------
           FILE_DATA_BASE64=$(echo "$FILE_TEXT" | cut -d '|' -f 3)
+          # ---------------------------------------
+          # Remove header from file
           FILE_DATA_BASE64=$(echo "$FILE_DATA_BASE64" | cut -d ',' -f 2)
           echo "$FILE_DATA_BASE64" > base64.txt
           # ---------------------------------------
