--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,6 +22,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      
+      - name: Log into GCP - Way 0
+        run: |
+          echo '${{ secrets.GCP_SA_KEY }}' > key.json;
+          gcloud auth login --cred-file=key.json;
+
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v2'
+        with:
+          version: '>= 363.0.0'
 
       - name: Log into GCP
         run: |
@@ -54,21 +64,16 @@ jobs:
           # ---------------------------------------
           # Remove header from file
           FILE_DATA_BASE64=$(echo "$FILE_DATA_BASE64" | cut -d ',' -f 2)
+          # ---------------------------------------
+          # Save the ENCODED base64 string to a file on the runner
           echo "$FILE_DATA_BASE64" > base64.txt
           # ---------------------------------------
-          # Save base64 string to a file on the runner
-          cat base64.txt | base64 -d > '$DESIRED_FILE_NAME'
+          # Save the DECODED base64 string to a file on the runner
+          cat base64.txt | base64 -d > src/$DESIRED_FILE_NAME
           # ---------------------------------------
-          repoOwner=$(echo "${{ github.repository }}" | cut -d '/' -f 1);
-          repoOwnerEmail="j622amilah@gmail.com";
-          git config --global user.email ${repoOwnerEmail};
-          git config --global user.name ${repoOwner};
-          git pull origin main;
-          git checkout main;
-          git branch --set-upstream-to origin/main;
-          git merge main --ff-only;
-          # git add /home/runner/work/dragAndDrop_to_Storage/dragAndDrop_to_Storage/$DESIRED_FILE_NAME;
-          git add /home/runner/work/dragAndDrop_to_Storage/dragAndDrop_to_Storage/base64.txt;
-          git diff-index --quiet HEAD || git commit -m "add files" --allow-empty;
-          git push;
+          # GCP CLI to send file to bucket
+          gcloud storage cp /home/runner/work/dragAndDrop_to_Storage/dragAndDrop_to_Storage/src/$DESIRED_FILE_NAME gs://$GCP_BUCKET_NAME/
+          # ---------------------------------------
+          # List contents of bucket to the output src/bucket_contents.log file
+          gcloud storage ls --recursive gs://$GCP_BUCKET_NAME/**  >  src/bucket_contents.log
           # ---------------------------------------
