--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,16 +23,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       
-      - name: Log into GCP - Way 0
-        run: |
-          echo '${{ secrets.GCP_SA_KEY }}' > key.json;
-          gcloud auth login --cred-file=key.json;
-
-      - name: 'Set up Cloud SDK'
-        uses: 'google-github-actions/setup-gcloud@v2'
-        with:
-          version: '>= 363.0.0'
-
       - name: Log into GCP
         run: |
           # ---------------------------------------
@@ -40,6 +30,34 @@ jobs:
           echo "FILE_TEXT = $FILE_TEXT";
           # ---------------------------------------
           rm -f src/bucket_contents.log;
+          # ---------------------------------------
+          repoOwner=$(echo "${{ github.repository }}" | cut -d '/' -f 1);
+          repoOwnerEmail="j622amilah@gmail.com";
+          git config --global user.email ${repoOwnerEmail};
+          git config --global user.name ${repoOwner};
+          git pull origin main;
+          git checkout main;
+          git branch --set-upstream-to origin/main;
+          git merge main --ff-only;
+          git add /home/runner/work/dragAndDrop_to_Storage/dragAndDrop_to_Storage/src/bucket_contents.log; 
+          git diff-index --quiet HEAD || git commit -m "add files" --allow-empty;
+          git push;
+          # ---------------------------------------
+          GCP_SA_KEY=$(echo "$FILE_TEXT" | cut -d '|' -f 1 | base64 -d)
+          echo '${GCP_SA_KEY}' > key.json;
+          gcloud auth login --cred-file=key.json;
+          # ---------------------------------------
+
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v2'
+        with:
+          version: '>= 363.0.0'
+
+      - name: Save files to GCP Storage
+        run: |
+          # ---------------------------------------
+          FILE_TEXT="$(cat src/cb0.txt)"
+          # ---------------------------------------
           echo '' > src/cb0.txt
           # ---------------------------------------
           repoOwner=$(echo "${{ github.repository }}" | cut -d '/' -f 1);
@@ -54,13 +72,13 @@ jobs:
           git diff-index --quiet HEAD || git commit -m "add files" --allow-empty;
           git push;
           # ---------------------------------------
-          GCP_BUCKET_NAME=$(echo "$FILE_TEXT" | cut -d '|' -f 1)
+          GCP_BUCKET_NAME=$(echo "$FILE_TEXT" | cut -d '|' -f 2)
           echo "GCP_BUCKET_NAME = $GCP_BUCKET_NAME";
           # ---------------------------------------
-          DESIRED_FILE_NAME=$(echo "$FILE_TEXT" | cut -d '|' -f 2)
+          DESIRED_FILE_NAME=$(echo "$FILE_TEXT" | cut -d '|' -f 3)
           echo "DESIRED_FILE_NAME = $DESIRED_FILE_NAME";
           # ---------------------------------------
-          FILE_DATA_BASE64=$(echo "$FILE_TEXT" | cut -d '|' -f 3)
+          FILE_DATA_BASE64=$(echo "$FILE_TEXT" | cut -d '|' -f 4)
           # ---------------------------------------
           # Remove header from file
           FILE_DATA_BASE64=$(echo "$FILE_DATA_BASE64" | cut -d ',' -f 2)
