--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: Log into GCP
         run: |
           # ---------------------------------------
-          rm -f src/bucket_contents.log;
+          echo '' > src/bucket_contents.log;
           # ---------------------------------------
           repoOwner=$(echo "${{ github.repository }}" | cut -d '/' -f 1);
           repoOwnerEmail="j622amilah@gmail.com";
