--- a/.github/workflows/reset_key_automatically.yaml
+++ b/.github/workflows/reset_key_automatically.yaml
@@ -1,8 +1,9 @@
 name: automatically reset (salt, encrypt) repository key for Frontend file
 
 on:
-  schedule:
-    - cron: '1 0,3,6,7,11,12,15,19,18,23 * * *'
+  push:
+    branches:
+      - main
       
 jobs:
   reset_key:
