--- a/.github/workflows/main1.yaml
+++ b/.github/workflows/main1.yaml
@@ -38,7 +38,7 @@ jobs:
       - name: Save files to GCP Storage
         run: |
           # ---------------------------------------
-          ROW_LEN=$(cat src1/cb0.txt | cut -d '|' -f 1)
+          ROW_LEN=$(cat src1/cb0.txt | cut -d '|' -f 1);
           echo "ROW_LEN = $ROW_LEN";
           # ---------------------------------------
           c=0; 
@@ -46,13 +46,15 @@ jobs:
             # ---------------------------------------
             echo "c = $c";
             # ---------------------------------------
-            FILE_TEXT="$(cat src1/cb${c}.txt)"
+            FILE_TEXT="$(cat src1/cb${c}.txt)";
             # ---------------------------------------
-            if [[ $c == 0 ]]; then;
-              echo '' > src1/cb${c}.txt
+            if [[ $c == 0 ]]; then
+              echo '' > src1/cb${c}.txt;
             else
-              rm -rf src1/cb${c}.txt
-            fi
+              if [ -f src1/cb${c}.txt ]; then
+                rm -rf src1/cb${c}.txt;
+              fi;
+            fi;
             # ---------------------------------------
             repoOwner=$(echo "${{ github.repository }}" | cut -d '/' -f 1);
             repoOwnerEmail="j622amilah@gmail.com";
